--- a/src/components/sections/TotalProduction/TotalProduction.module.scss
+++ b/src/components/sections/TotalProduction/TotalProduction.module.scss
@@ -254,4 +254,9 @@
 	.dropdown div:first-child{
 		width: 212px;
 	}
+	.titleRight {
+		display: block;
+		float: none;
+	  	font-weight: 300;
+  }
 }
